--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "baseUrl": "./",
       "paths": {
         "sap/icecream/*": ["webapp/*"]
-      }
+      },
+      "outDir": "dist",
     },
-    "include": ["webapp/**/*"]
-  }
+    "include": ["webapp/**/*"],
+}
