--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -119,7 +119,7 @@
 				{
 					"pattern": "reviews",
 					"name": "reviews",
-					"target": "reviews"
+					"target": "reviewspage"
 				}
 			],
 			"targets": {
@@ -138,7 +138,7 @@
 					"name": "ChartContainer",
 					"level": 1
 				},
-				"reviews": {
+				"reviewspage": {
 					"id": "reviews",
 					"name": "Reviews",
 					"level": 1
